# Backend

./: README.md
github-stars-cli/: Journal.md  README.md  github-stars.js  package-lock.json  package.json
storefront/: pyproject.toml
storefront/playground/: urls.py  views.py
storefront/storefront/: settings.py
test/: test.sqlproj
todo-cli/: Joural.md  package-lock.json  package.json  todo.js  todos.db
web-scraper-cli/: README.md  package-lock.json  package.json  web-scraper.js
